k8s/taches-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: service-taches

spec:
  replicas: 1

  selector:
    matchLabels:
      app: service-taches

  template:
    metadata:
      labels:
        app: service-taches

    spec:
      containers:
        - name: service-taches
          image: service-taches:1.0.0
          imagePullPolicy: Never

          ports:
            - containerPort: 8000

          volumeMounts:
            - name: todo-storage
              mountPath: /data

      volumes:
        - name: todo-storage
          persistentVolumeClaim:
            claimName: todo-pvc
