k8s/categories-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: service-categories

spec:
  type: ClusterIP

  selector:
    app: service-categories

  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
